--- a/MP01_Cristobal/index.html
+++ b/MP01_Cristobal/index.html
@@ -3,17 +3,17 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title> BINI </title>
-  <link rel="shortcut icon" href="./assets/biniLogo.png" type="image" />
+  <link rel="icon" href="./assets/biniLogo.png" type="image"/>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-
 </head>
+
 <style>
   :root {
     --background-color: #0a0b0c;
@@ -31,7 +31,6 @@
   body {
     background-color: var(--background-color);
     color: var(--primary-color);
-    /* cursor: url(./assets/biniLogo2.jpg), pointer; */
   }
 
   html {
@@ -121,8 +120,6 @@
   .vidcontainer {
     height: 100vh;
     width: 100%;
-    overflow: hidden;
-    position: relative;
   }
 
   .video {
@@ -141,7 +138,6 @@
     text-decoration: none;
     font-size: 16px;
     border: 1px solid var(--secondary-color);
-    text-align: center;
     transition: background-color 0.3s ease;
   }
 
@@ -209,7 +205,7 @@
   .flip-card-back {
     position: absolute;
     width: 100%;
-    height: 90%;
+    height: 100%;
     backface-visibility: hidden;
     border-radius: 30px;
   }
@@ -223,9 +219,11 @@
   }
 
   .flip-card-back {
-    background-color: var(--primary-color);
-    color: var(--background-color);
+    background-color: var(--background-color);
+    color: var(--primary-color);
+    border: 3px solid var(--secondary-color);
     transform: rotateY(180deg);
+    box-shadow: 0 4px 10px rgba(255, 255, 255, 0.658); /* Add shadow */
   }
 
   .logo-img {
@@ -264,7 +262,7 @@
     transform: translateY(-5px);
   }
 
-  .logo-img {
+  .logo-image {
     width: 50px;
     height: auto;
     margin-right: 10px;
@@ -282,7 +280,6 @@
 
   .article-title:hover {
     color: var(--background-color);
-    text-decoration: underline;
     transform: translateX(5px);
   }
 
@@ -291,12 +288,12 @@
     transition: all 0.3s ease-in-out;
   }
 
-  .logo-img {
+  .logo-image {
     transition: transform 1s ease-in-out, opacity 0.5s ease-in-out;
     transform-origin: center;
   }
 
-  .logo-container:hover .logo-img {
+  .logo-container:hover .logo-image {
     transform: rotate(360deg) scale(1.5);
   }
 
@@ -335,12 +332,16 @@
     </div>
   </nav>
 
-  <div class="vidcontainer" id="home">
+  <div class="vidcontainer overflow-hidden position-relative" id="home">
     <iframe class="video"
-      src="https://www.youtube.com/embed/wuV8cHK41oQ?rel=0&controls=0&disablekb=1&autoplay=1&loop=1&mute=1"
-      title="#BINI | Cherry On Top [ Official MV Teaser ]" frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-      referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        src="https://www.youtube.com/embed/wuV8cHK41oQ?rel=0&controls=0&disablekb=1&autoplay=1&loop=1&mute=1&playlist=wuV8cHK41oQ"
+        title="#BINI | Cherry On Top [ Official MV Teaser ]" 
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" 
+        allowfullscreen>
+</iframe>
+
     <div class="bannercolor">
     </div>
     <div class="container-fluid d-flex justify-content-center align-items-center">
@@ -357,7 +358,7 @@
               their greatest strength.
             </p>
             <div class="col">
-              <a href="#members" class="btn display-3 rounded-5 py-2 px-4"><strong>Learn More</strong></a>
+              <a href="#members" class="btn text-center display-3 rounded-5 py-2 px-4"><strong>Learn More</strong></a>
             </div>
           </div>
         </div>
@@ -656,7 +657,7 @@
     <footer class="footer text-center my-5 py-5">
       <div class="container-fluid d-flex justify-content-center">
         <a href="https://kayexnina.github.io/MP01_Cristobal/index.html" class="logo-container">
-          <img src="./assets/biniLogo.png" alt="Logo" class="img-fluid logo-img" style="width: 100px" />
+          <img src="./assets/biniLogo.png" alt="Logo" class="img-fluid logo-image" style="width: 100px" />
         </a>
       </div>
     </footer>
