--- a/SAM02_Cristobal/index.html
+++ b/SAM02_Cristobal/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>SPC LOCALE</title>
-  <link rel="shortcut icon" href="https://raw.githubusercontent.com/kayexnina/SAMA02_Cristobal/refs/heads/main/assets/logo.png" type="image">
+  <link rel="icon" href="https://raw.githubusercontent.com/kayexnina/SAMA02_Cristobal/refs/heads/main/assets/logo.png" type="image">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
