--- a/SAM04_Cristobal/index.html
+++ b/SAM04_Cristobal/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Grey's Anatomy</title>
-  <link rel="shortcut icon" href="./assets/greysAnaIcon.ico" type="image">
+  <link rel="icon" href="./assets/greysAnaIcon.ico" type="image">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <style>
