--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kaye Niña Cristobal</title>
-  <link rel="icon" href="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/myLogo.png" type="image" />
+  <link rel="icon" href="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/myLogo.png"
+    type="image" />
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
@@ -396,6 +397,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#works">Projects</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -657,14 +661,14 @@
             Activity 3: My Github's Landing Page</strong></a>
       </div>
       <div class="col-12 col-sm-4 mb-3">
-        <a href="https://kayexnina.github.io/SAM04_Cristobal/index.html" class="btn display-3 rounded-1 py-3 px-4" style="width: 100%" role="button"><strong>SAM Activity 4:
+        <a href="https://kayexnina.github.io/SAM04_Cristobal/index.html" class="btn display-3 rounded-1 py-3 px-4"
+          style="width: 100%" role="button"><strong>SAM Activity 4:
             API with JSON return</strong></a>
       </div>
       <div class="col-12 col-sm-4 mb-3">
-        <a href="https://kayexnina.github.io/MP01_Cristobal/index.html" class="btn display-3 rounded-1 py-3 px-4" style="width: 100%" role="button"><strong>SAM Midterm P1:
-          Video Integration</strong></a>
-          <!-- <a href="#" class="btn display-3 rounded-1 py-3 px-4" style="width: 100%" role="button"><strong>SAM Midterm P1:
-            Video Integration</strong></a> -->
+        <a href="https://kayexnina.github.io/MP01_Cristobal/index.html" class="btn display-3 rounded-1 py-3 px-4"
+          style="width: 100%" role="button"><strong>SAM Midterm P1:
+            Video Integration</strong></a>
       </div>
       <div class="col-12 col-sm-4 mb-3">
         <a href="#" class="btn display-3 rounded-1 py-3 px-4" style="width: 100%" role="button"><strong>SAM Activity 6:
@@ -708,6 +712,14 @@
       </a>
     </div>
   </footer>
+
+  <!-- To Top -->
+  <script src="https://static.elfsight.com/platform/platform.js" async></script>
+  <div class="elfsight-app-c14266a7-2243-400a-9749-76303b60ce45" data-elfsight-app-lazy></div>
+
+  <!-- Contact Form -->
+  <script src="https://static.elfsight.com/platform/platform.js" async></script>
+  <div class="elfsight-app-f51766b3-7b2d-4de0-8b4d-fcd4b40d0af8" id="contact" data-elfsight-app-lazy></div>
 
   <!-- Bootstrap JS and dependencies -->
   <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
@@ -874,6 +886,28 @@
       link.click();
       document.body.removeChild(link);
     }
+
+    //Contact
+    document.addEventListener('DOMContentLoaded', function () {
+      // Get the contact link and Elfsight form container
+      const contactLink = document.getElementById('contact-link');
+      const contactForm = document.querySelector('.elfsight-app-f51766b3-7b2d-4de0-8b4d-fcd4b40d0af8');
+
+      // Ensure the form is hidden initially if needed
+      contactForm.style.display = 'none'; // Hide by default, if applicable
+
+      // Add a click event to show the Elfsight form
+      contactLink.addEventListener('click', function (e) {
+        e.preventDefault(); // Prevent default behavior (scrolling to #contact)
+
+        // Toggle the visibility of the contact form
+        if (contactForm.style.display === 'none' || contactForm.style.display === '') {
+          contactForm.style.display = 'block'; // Show the form
+        } else {
+          contactForm.style.display = 'none'; // Hide the form (if you want to toggle)
+        }
+      });
+    });
   </script>
 </body>
 
