--- a/MP01_Cristobal/index.html
+++ b/MP01_Cristobal/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title> BINI </title>
-  <link rel="icon" href="./assets/biniLogo.png" type="image"/>
+  <link rel="icon" href="./assets/biniLogo.png" type="image" />
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
@@ -223,7 +223,8 @@
     color: var(--primary-color);
     border: 3px solid var(--secondary-color);
     transform: rotateY(180deg);
-    box-shadow: 0 4px 10px rgba(255, 255, 255, 0.658); /* Add shadow */
+    box-shadow: 0 4px 10px rgba(255, 255, 255, 0.658);
+    /* Add shadow */
   }
 
   .logo-img {
@@ -334,13 +335,11 @@
 
   <div class="vidcontainer overflow-hidden position-relative" id="home">
     <iframe class="video"
-        src="https://www.youtube.com/embed/wuV8cHK41oQ?rel=0&controls=0&disablekb=1&autoplay=1&loop=1&mute=1&playlist=wuV8cHK41oQ"
-        title="#BINI | Cherry On Top [ Official MV Teaser ]" 
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        referrerpolicy="strict-origin-when-cross-origin" 
-        allowfullscreen>
-</iframe>
+      src="https://www.youtube.com/embed/wuV8cHK41oQ?rel=0&controls=0&disablekb=1&autoplay=1&loop=1&mute=1&playlist=wuV8cHK41oQ"
+      title="#BINI | Cherry On Top [ Official MV Teaser ]" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+    </iframe>
 
     <div class="bannercolor">
     </div>
@@ -652,6 +651,10 @@
         </a>
       </li>
     </ul>
+
+    <!-- To Top -->
+    <script src="https://static.elfsight.com/platform/platform.js" async></script>
+    <div id="widget" class="elfsight-app-c14266a7-2243-400a-9749-76303b60ce45" data-elfsight-app-lazy></div>
 
     <!-- Footer -->
     <footer class="footer text-center my-5 py-5">
