BINI Website Initial Checking

--- a/MP01_Cristobal/index.html
+++ b/MP01_Cristobal/index.html
@@ -224,7 +224,6 @@
     border: 3px solid var(--secondary-color);
     transform: rotateY(180deg);
     box-shadow: 0 4px 10px rgba(255, 255, 255, 0.658);
-    /* Add shadow */
   }
 
   .logo-img {
@@ -384,9 +383,9 @@
             </div>
             <div class="flip-card-back d-flex flex-column justify-content-center align-items-center p-3">
               <img
-                src="https://scontent.fmnl13-3.fna.fbcdn.net/v/t39.30808-6/460350262_122174080766221695_5915746347831915964_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeEykmFNFd8T2RlTWkzbvwMYcmVjaJyC_rtyZWNonIL-u1BAxppkg0x6p4UdDYebBBmIJRFN2gAs0A_emmGmaMBL&_nc_ohc=a_jCcpLL684Q7kNvgExt620&_nc_zt=23&_nc_ht=scontent.fmnl13-3.fna&_nc_gid=ArJNw_8cs4kXD7Ja-Wa7g0g&oh=00_AYDqQhZSiuKR01wWpRWxIzku7JtECaYj_uwmrQZAqYvTmw&oe=67413495"
+                src="https://raw.githubusercontent.com/kayexnina/BINI/refs/heads/main/aiah.jpg"
                 class="imgContainer">
-              <h5 class="card-title m-1" style="color: var(--secondary-color)">Maraiah Queen Arceta</h5>
+              <h5 class="card-title m-1" style="color: var(--secondary-color); font-weight: 700;">Maraiah Queen Arceta</h5>
               <p class="card-text text-start" style="line-height: 1.2rem; font-size: 12px;">
                 Birthday: January 27, 2001 <br>
                 Birth Place: Lapu-Lapu City, Cebu, Philippines <br>
@@ -410,9 +409,9 @@
             </div>
             <div class="flip-card-back d-flex flex-column justify-content-center align-items-center p-3">
               <img
-                src="https://scontent.fmnl13-3.fna.fbcdn.net/v/t39.30808-6/460280377_122174080820221695_1821702065122888479_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeFv5jV9COaAekwuGLo3mm8nJ-X-7TgH5i4n5f7tOAfmLtcVzU-I0WzjFBWrdN488L_GtuWSE7m8yuqZV-4JlOr9&_nc_ohc=K9CPn_8itssQ7kNvgHh2xYF&_nc_zt=23&_nc_ht=scontent.fmnl13-3.fna&_nc_gid=A95yR9shl_XMo6bkY-Dg9bT&oh=00_AYA1oxoOgGgq2jgXIUUuEObkBa71b_HL_t4AYVPgxLl5bQ&oe=67411F4D"
+                src="https://raw.githubusercontent.com/kayexnina/BINI/refs/heads/main/colet.jpg"
                 class="imgContainer">
-              <h5 class="card-title m-1" style="color: var(--secondary-color)">Maria Nicolette Vergara</h5>
+              <h5 class="card-title m-1" style="color: var(--secondary-color); font-weight: 700;">Maria Nicolette Vergara</h5>
               <p class="card-text text-start" style="line-height: 1.2rem; font-size: 12px;">
                 Birthday: September 14, 2001 <br>
                 Birth Place: Tagbilaran City, Bohol, Philippines <br>
@@ -436,9 +435,9 @@
             </div>
             <div class="flip-card-back d-flex flex-column justify-content-center align-items-center p-3">
               <img
-                src="https://scontent.fmnl13-4.fna.fbcdn.net/v/t39.30808-6/459938319_122174080892221695_2513347257495871451_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeFpgrtHFO8DQ25qDK0qun1Pj3kVLiMO9r-PeRUuIw72v-NhRUY4GWa0yBQ4LHzZnOKtI-WU3pjPW-N8ZtuiW2Nc&_nc_ohc=EXQC1gXes-QQ7kNvgGdzaWy&_nc_zt=23&_nc_ht=scontent.fmnl13-4.fna&_nc_gid=ABKMjGJPGBlwc5xTd4Qkqip&oh=00_AYABSz6qbYNZfly1xwbKC0EV8xhQyiIx4wNkMBaeC4wYLA&oe=6741159D"
+                src="https://raw.githubusercontent.com/kayexnina/BINI/refs/heads/main/gwen.jpg"
                 class="imgContainer">
-              <h5 class="card-title m-1" style="color: var(--secondary-color)">Gweneth Apuli</h5>
+              <h5 class="card-title m-1" style="color: var(--secondary-color); font-weight: 700;">Gweneth Apuli</h5>
               <p class="card-text text-start" style="line-height: 1.2rem; font-size: 12px;">
                 Birthday: June 19, 2003 <br>
                 Birth Place: Daraga, Albay Philippines <br>
@@ -462,9 +461,9 @@
             </div>
             <div class="flip-card-back d-flex flex-column justify-content-center align-items-center p-3">
               <img
-                src="https://scontent.fmnl13-1.fna.fbcdn.net/v/t39.30808-6/460361766_122174080664221695_1390688473583180275_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeHD1SoK_oyizE9A2cWMAHfftf-Rf47hCcO1_5F_juEJw1Qysu9aEVfbcCT6XB-UHTLLVsxGkfrj9D9DXkfOEyJP&_nc_ohc=aWLYTFhNlocQ7kNvgGPkMZE&_nc_zt=23&_nc_ht=scontent.fmnl13-1.fna&_nc_gid=A51ZPTYKZbhIGjSx4wvXPYu&oh=00_AYAzbMZubfNElOSdjJkQcHpKy7jXmSqB9kQZLV6MU1zvnA&oe=67413DD1"
+                src="https://raw.githubusercontent.com/kayexnina/BINI/refs/heads/main/jhoanna.jpg"
                 class="imgContainer">
-              <h5 class="card-title m-1" style="color: var(--secondary-color)">Jhoanna Christine Robles</h5>
+              <h5 class="card-title m-1" style="color: var(--secondary-color); font-weight: 700;">Jhoanna Christine Robles</h5>
               <p class="card-text text-start" style="line-height: 1.2rem; font-size: 12px;">
                 Birthday: January 26, 2004 <br>
                 Birth Place: Calamba City, Laguna, Philippines <br>
@@ -489,9 +488,9 @@
             </div>
             <div class="flip-card-back d-flex flex-column justify-content-center align-items-center p-3">
               <img
-                src="https://scontent.fmnl13-3.fna.fbcdn.net/v/t39.30808-6/460207861_122174080838221695_4541591337273677354_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeF3ACJE9ii0GdRKIKFXXimYJcS53RM9VzclxLndEz1XNysbaqs9dSEKh75zxuPoD_Ce_fygq82MSI2ZlmTyu9KH&_nc_ohc=7uHGy21yljwQ7kNvgECPUev&_nc_zt=23&_nc_ht=scontent.fmnl13-3.fna&_nc_gid=AD2cI11r4KpzUCXqvTuKTpJ&oh=00_AYA6sLPtsIGaxje5CeaOVt2GUe5uoaIrRVdXsByT4Lkm2Q&oe=67410B4A"
+                src="https://raw.githubusercontent.com/kayexnina/BINI/refs/heads/main/maloi.jpg"
                 class="imgContainer">
-              <h5 class="card-title m-1" style="color: var(--secondary-color)">Mary Loi Yves Ricalde</h5>
+              <h5 class="card-title m-1" style="color: var(--secondary-color); font-weight: 700;">Mary Loi Yves Ricalde</h5>
               <p class="card-text text-start" style="line-height: 1.2rem; font-size: 12px;">
                 Birthday: May 27, 2002 <br>
                 Birth Place: Lemery, Batangas Philippines <br>
@@ -515,9 +514,9 @@
             </div>
             <div class="flip-card-back d-flex flex-column justify-content-center align-items-center p-3">
               <img
-                src="https://scontent.fmnl13-2.fna.fbcdn.net/v/t39.30808-6/460351791_122174081006221695_2711470567701530258_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeHRlVaamiq48Kt91HIo9rE09hdhuPUZ4zL2F2G49RnjMmzS7zYOYLCTcJ4br7tsTeQWQIZia7LfdCNzpkPJDIGe&_nc_ohc=EX1Y6ha4SKwQ7kNvgEXmrUy&_nc_zt=23&_nc_ht=scontent.fmnl13-2.fna&_nc_gid=AlCmt37UtKbFR-9Tyb2ZYie&oh=00_AYBpWnvgLgLHTIvXfMqsd5i_7RVZavxR-iZlG-iZmmyKNQ&oe=67411D63"
+                src="https://raw.githubusercontent.com/kayexnina/BINI/refs/heads/main/mikha.jpg"
                 class="imgContainer">
-              <h5 class="card-title m-1" style="color: var(--secondary-color)">Mikhaela Janna Lim</h5>
+              <h5 class="card-title m-1" style="color: var(--secondary-color); font-weight: 700;">Mikhaela Janna Lim</h5>
               <p class="card-text text-start" style="line-height: 1.2rem; font-size: 12px;">
                 Birthday: November 8, 2003 <br>
                 Birth Place: Cebu City, Philippines <br>
@@ -541,9 +540,9 @@
             </div>
             <div class="flip-card-back d-flex flex-column justify-content-center align-items-center p-3">
               <img
-                src="https://scontent.fmnl13-1.fna.fbcdn.net/v/t39.30808-6/460100896_122174081042221695_2435900682540203672_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeEA66u1chDL_om2pYDokmpujSFM1f8GM3iNIUzV_wYzeM4XCANBO4wWZsLLH_FjQuSBk0zubu1-hKeFTmxGaEiO&_nc_ohc=NJ214jXq938Q7kNvgHL9WTr&_nc_zt=23&_nc_ht=scontent.fmnl13-1.fna&_nc_gid=A7ttHz6LWYbk0g9T1YggurH&oh=00_AYBTLaHei18lUdKhVEehctgjEQfHAuOIa1Av_qLV3hegug&oe=67413868"
+                src="https://raw.githubusercontent.com/kayexnina/BINI/refs/heads/main/sheena.jpg"
                 class="imgContainer">
-              <h5 class="card-title m-1" style="color: var(--secondary-color)">Sheena Mae Catacutan</h5>
+              <h5 class="card-title m-1" style="color: var(--secondary-color); font-weight: 700;">Sheena Mae Catacutan</h5>
               <p class="card-text text-start" style="line-height: 1.2rem; font-size: 12px;">
                 Birthday: May 9, 2004
                 <br>
@@ -569,9 +568,9 @@
             </div>
             <div class="flip-card-back d-flex flex-column justify-content-center align-items-center p-3">
               <img
-                src="https://scontent.fmnl13-3.fna.fbcdn.net/v/t39.30808-6/460221294_122174080952221695_9180718979513612076_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeH4t-mohgMYc46-5f_FKdPJVDlK-vjlkQpUOUr6-OWRChGQkK-KAK3O-oQ762XP2gQOFcaQy9UrhAwNfmkNMdPE&_nc_ohc=WYRyAaVNKPMQ7kNvgGVjzPm&_nc_zt=23&_nc_ht=scontent.fmnl13-3.fna&_nc_gid=ADz7Q8TvUlePOI4Qtb6Pib0&oh=00_AYCbDbTJmOfDJxCTUpjiwDAov36pv2JcSpDH5kXfuGEqtw&oe=6741267E"
+                src="https://raw.githubusercontent.com/kayexnina/BINI/refs/heads/main/stacey.jpg"
                 class="imgContainer">
-              <h5 class="card-title m-1" style="color: var(--secondary-color)">Lindtsey Stacey Aubrey Sevilleja</h5>
+              <h5 class="card-title m-1" style="color: var(--secondary-color); font-weight: 700;">Lindtsey Stacey Aubrey Sevilleja</h5>
               <p class="card-text text-start" style="line-height: 1.2rem; font-size: 12px;">
                 Birthday: July 13, 2003 <br>
                 Birth Place: Nueva Vizcaya, Philippines <br>
@@ -677,7 +676,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/scrollreveal"></script>
+
     <script>
       // Navbar
       function toggleNavbar() {
@@ -733,7 +732,6 @@
       });
 
     </script>
-
+    
 </body>
-
 </html>
