adding assets folder for error page

--- a/404.html
+++ b/404.html
@@ -110,7 +110,7 @@
             Home</strong></a>
       </div>
       <div class="col-12 col-lg-6 col-md-6 d-none d-lg-flex justify-content-center align-items-center">
-        <img src="./Bee.png" class="img-fluid" alt="Personal Image" />
+        <img src="./assets/Bee.png" class="img-fluid" alt="Personal Image" />
       </div>
     </div>
   </div>
@@ -148,7 +148,7 @@
             callback();
           }
         }
-      }, Math.random() * 100 + 50);
+      }, Math.random() * 200 + 50);
     }
 
     function startTypingEffect() {
