--- a/404.html
+++ b/404.html
@@ -110,7 +110,7 @@
             Home</strong></a>
       </div>
       <div class="col-12 col-lg-6 col-md-6 d-none d-lg-flex justify-content-center align-items-center">
-        <img src="./assets/Bee.png" class="img-fluid" alt="Personal Image" />
+        <img src="./assets/Bee.png" class="img-fluid" alt="Sad Bee" />
       </div>
     </div>
   </div>
