updating my projects

--- a/index.html
+++ b/index.html
@@ -645,8 +645,8 @@
     <h1 class="display-4 text-center my-5">Projects</h1>
     <div class="row justify-content-center">
       <div class="col-12 col-sm-4 mb-3">
-        <a href="https://github.com/kayexnina/kayexnina.github.io" class="btn display-3 rounded-1 py-3 px-4"
-          style="width: 100%" role="button"><strong>SAM Activity 1: Deploying My GitHub page</strong></a>
+        <a href="https://kayexnina.github.io/SAM01_Cristobal/index.html" class="btn display-3 rounded-1 py-3 px-4"
+          style="width: 100%" role="button"><strong>SAM Activity 1: Mcdonald's Brochure</strong></a>
       </div>
       <div class="col-12 col-sm-4 mb-3">
         <a href="https://kayexnina.github.io/SAM02_Cristobal/index.html" class="btn display-3 rounded-1 py-3 px-4"
@@ -655,7 +655,7 @@
       <div class="col-12 col-sm-4 mb-3">
         <a href="https://kayexnina.github.io/index.html" class="btn display-3 rounded-1 py-3 px-4" style="width: 100%"
           role="button"><strong>SAM
-            Activity 3: My Github's Landing Page</strong></a>
+            Activity 3: My Portfolio</strong></a>
       </div>
       <div class="col-12 col-sm-4 mb-3">
         <a href="https://kayexnina.github.io/SAM04_Cristobal/index.html" class="btn display-3 rounded-1 py-3 px-4"
@@ -668,8 +668,9 @@
             Video Integration</strong></a>
       </div>
       <div class="col-12 col-sm-4 mb-3">
-        <a href="#" class="btn display-3 rounded-1 py-3 px-4" style="width: 100%" role="button"><strong>SAM Activity 6:
-            Title Here</strong></a>
+        <a href="https://kayexnina.github.io/404.html" class="btn display-3 rounded-1 py-3 px-4" style="width: 100%"
+          role="button"><strong>SAM Midterm P3:
+            Error 404</strong></a>
       </div>
       <div class="col-12 col-sm-4 mb-3">
         <a href="#" class="btn display-3 rounded-1 py-3 px-4" style="width: 100%" role="button"><strong>SAM Activity 7:
