--- a/404.html
+++ b/404.html
@@ -106,7 +106,7 @@
           <span class="display-3 auto-type neon-text font-weight" style="font-weight: 700"></span>
         </h1>
         <p>Let’s get you back on track. Click below to return home!</p>
-        <a href="index.html" class="btn display-3 rounded-4 py-2 px-4" style="width: auto"><strong>Return to
+        <a href="https://kayexnina.github.io/index.html" class="btn display-3 rounded-4 py-2 px-4" style="width: auto"><strong>Return to
             Home</strong></a>
       </div>
       <div class="col-12 col-lg-6 col-md-6 d-none d-lg-flex justify-content-center align-items-center">
