--- a/SAM04_Cristobal/index.html
+++ b/SAM04_Cristobal/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Grey's Anatomy</title>
-  <link rel="icon" href="./assets/greysAnaIcon.ico" type="image">
+  <link rel="icon" href="https://raw.githubusercontent.com/kayexnina/kayexnina.github.io/refs/heads/main/SAM04_Cristobal/assets/greysAnaIcon.ico" type="image">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <style>
@@ -22,7 +22,7 @@
     }
 
     body {
-      background-image: url('./assets/bgImage.jpg');
+      background-image: url('https://raw.githubusercontent.com/kayexnina/kayexnina.github.io/refs/heads/main/SAM04_Cristobal/assets/bgImage.jpg');
       background-size: cover;
       background-position: center;
       display: flex;
@@ -31,7 +31,7 @@
     /* For mobile screens (smallest devices) */
     @media (max-width: 575px) {
       body {
-        background-image: url('./assets/bgMobile.png');
+        background-image: url('https://raw.githubusercontent.com/kayexnina/kayexnina.github.io/refs/heads/main/SAM04_Cristobal/assets/bgMobile.png');
         background-size: cover;
         background-position: center;
       }
