--- a/SAM04_Cristobal/list.html
+++ b/SAM04_Cristobal/list.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>All Characters</title>
-    <link rel="shortcut icon" href="./assets/greysAnaIcon.ico" type="image">
+    <link rel="icon" href="https://raw.githubusercontent.com/kayexnina/kayexnina.github.io/refs/heads/main/SAM04_Cristobal/assets/greysAnaIcon.ico" type="image">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -24,7 +24,7 @@
         }
 
         body {
-            background-image: url(./assets/mainBg.png);
+            background-image: url('https://raw.githubusercontent.com/kayexnina/kayexnina.github.io/refs/heads/main/SAM04_Cristobal/assets/mainBg.png');
             background-size: cover;
             background-position: center;
             display: flex;
